# IniFileManager

./: CMakeLists.txt  IniFileManager.cpp  IniFileManager.h  README.md
test/: CMakeLists.txt  IniFileManagerTest.cpp  runAllTests.cpp  test.txt
